Fix overflow of hip hop homepage titleblock on wide short browsers

--- a/features/2018/why-hip-hop-matters/src/homepage.scss
+++ b/features/2018/why-hip-hop-matters/src/homepage.scss
@@ -104,6 +104,7 @@
 		
 		h1 {
 			font-size: 6rem;
+			max-width: 800px;
 		}
 		
 		.superhead {
